MIDIStatus/MIDIStatus.h

/* MIDIPart構造体 */
/* コメントの< >は一般的なデフォルト値を示す */
typedef struct tagMIDIPart {
	void* m_pParent;
	long m_lPartMode;             /* 0=ノーマル,1=ドラム1,2=ドラム2,3=ドラム3,4=ドラム4 */
	long m_lOmniMonoPolyMode;     /* 1=OmniOn_Poly、2=OmniOn_Mono、<3>=OmniOff_Poly、4=OmniOff_Mono */
	long m_lChannelFineTuning;    /* 0～<8192>～16383 100/8192cent単位 RPN#1で設定 */
	long m_lChannelCoarseTuning;  /* 40～<64>～88 半音単位 チャンネルキーシフトとも言う RPN#2で設定 */
	long m_lPitchBendSensitivity; /* 0～<2>～24 半音単位 RPN#0で設定 */
	long m_lModulationDepthRange; /* 0～???? RPN#5で設定 */
	long m_lReceiveChannel;       /* 0～15,16 デフォルト値はパート番号に一致 SysExで設定(GS/88/XGのみ) */
	long m_lVelocitySenseDepth;   /* 0～<64>～127 SysExで設定(GS/88/XGのみ) */
	long m_lVelocitySenseOffset;  /* 0～<64>～127 SysExで設定(GS/88/XGのみ) */
	long m_lKeyboardRangeLow;     /* ノートリミットローとも言う <0>～127 SysExで設定(GS/88/XGのみ) */
	long m_lKeyboardRangeHigh;    /* ノートリミットハイとも言う 0～<127> SysExで設定(GS/88/XGのみ) */
	long m_lAssignableControler1Num; /* アサイナブルコントローラー1に使用するコントロールナンバー */
	long m_lAssignableControler2Num; /* アサイナブルコントローラー2に使用するコントロールナンバー */
	long m_lReserved1;            /* 将来拡張用1(勝手に使ってはならない) */
	long m_lReserved2;            /* 将来拡張用2(勝手に使ってはならない) */
	long m_lScaleOctaveTuning[12]; /* 0～<64>～127 0.1cent単位 */
	/* コントローラーディスティネーションセッティング */
	unsigned char m_cModulationDest[16];           /* モジュレーションを使った時の効果定義 */
	unsigned char m_cPitchBendDest[16];            /* ピッチベンドを使った時の効果定義 */
	unsigned char m_cChannelAfterTouchDest[16];    /* チャンネルアフタータッチを使った時の効果定義 */
	unsigned char m_cKeyAfterTouchDest[16];        /* キーアフタータッチを使った時の効果定義 */
	unsigned char m_cAssignableControler1Dest[16]; /* アサイナブルコントローラー1を使った時の効果定義 */
	unsigned char m_cAssignableControler2Dest[16]; /* アサイナブルコントローラー2を使った時の効果定義 */
	/* チャンネルボイス領域 */
	unsigned char m_cNote[128];          /* 各々<0>～127 値は打鍵時のベロシティ */
	unsigned char m_cNoteKeep[128];      /* 各々<0>～127 値は打鍵時のベロシティ */
	unsigned char m_cKeyAfterTouch[128]; /* 各々<0>～127 */
	unsigned char m_cControlChange[128]; /* 各々0～127 デフォルト値はCC#による。 */
	long m_lProgramChange;        /* <0>(AcousticGrandPiano)～127(Gunshot) */
	long m_lChannelAfterTouch;    /* <0>～127 */
	long m_lPitchBend;            /* 0～<8192>～16383 */
	/* ユーザー用拡張領域 */
	long m_lUser1;
	long m_lUser2;
	long m_lUser3;
	long m_lUserFlag;
	/* RPN/NRPN完全保存領域(普通は保存しない) */
#ifdef MIDISTATUS_RECORDNRPN
	unsigned char m_cNRPNMSB[128][128];
	unsigned char m_cNRPNLSB[128][128];
#endif
#ifdef MIDISTATUS_RECORDRPN
	unsigned char m_cRPNMSB[128][128];
	unsigned char m_cRPNLSB[128][128];
#endif
} MIDIPart;
/* MIDIDrumSetup構造体 */
/* コメントの< >は一般的なデフォルト値を示す */
typedef struct tagMIDIDrumSetup {
	void* m_pParent;
	unsigned char m_cDrumCutoffFrequency[128]; /* 各々0～<64>～127 NRPN#(20*128)台又はSysExで設定(XG) */
	unsigned char m_cDrumResonance[128];       /* 各々0～<64>～127 NRPN#(21*128)台又はSysExで設定(XG) */
	unsigned char m_cDrumAttackTime[128];      /* 各々0～<64>～127 NRPN#(22*128)台又はSysExで設定(XG) */
	unsigned char m_cDrumDecay1Time[128];      /* 各々0～<64>～127 NRPN#(23*128)台又はSysExで設定(XG) */
	unsigned char m_cDrumDecay2Time[128];      /* 各々0～<64>～127 NRPN#(23*128)台又はSysExで設定(XG) */
	unsigned char m_cDrumPitchCoarse[128];     /* 各々0～<64>～127 NRPN#(24*128)台又はSysExで設定(GS/88/XG) */
	unsigned char m_cDrumPitchFine[128];       /* 各々0～<64>～127 NRPN#(25*128)台又はSysExで設定(XG) */
	unsigned char m_cDrumVolume[128];          /* 各々0～<64>～127 NRPN#(26*128)台又はSysExで設定(GS/88/XG/GM2) */
	unsigned char m_cDrumPan[128];             /* 各々0～<64>～127 NRPN#(28*128)台又はSysExで設定(GS/88/XG/GM2) */
	unsigned char m_cDrumReverb[128];          /* 各々0～<64>～127 NRPN#(29*128)台又はSysExで設定(GS/88/XG/GM2) */
	unsigned char m_cDrumChorus[128];          /* 各々0～<64>～127 NRPN#(30*128)台又はSysExで設定(GS/88/XG/GM2) */
	unsigned char m_cDrumDelay[128];           /* 各々0～<64>～127 NRPN#(31*128)台又はSysExで設定(GS/88/XG) */
	long m_lUser1;
	long m_lUser2;
	long m_lUser3;
	long m_lUserFlag;
} MIDIDrumSetup;
/* MIDIStatus構造体 */
/* コメントの< >は一般的なデフォルト値を示す */
typedef struct tagMIDIStatus {
	long m_lModuleMode;           /* 0x00000000=NATIVE, 0x7E000002=GM,   0x7E000003=GM2, */
	                              /* 0x41000002=GS,   0x41000003=88,   0x43000002=XG */
	long m_lMasterFineTuning;     /* 24～<1024>～2024(GS), 0～<1024>～2048(XG), 0～<8192>～16383(その他) */
	long m_lMasterCoarseTuning;   /* 40～<64>～88 半音単位 マスターキーシフトとも言う */
	long m_lMasterBalance;        /* この値は使われない。 */
	long m_lMasterVolume;         /* 0～<127> SysExで設定 */
	long m_lMasterPan;            /* 1～<64>～127 SysExで設定 */
	long m_lMasterReverb[32];     /* 各々の意味と範囲はm_lModeの値により異なる(公式ガイドブック参照) */
	long m_lMasterChorus[32];     /* 各々の意味と範囲はm_lModeの値により異なる(公式ガイドブック参照) */
	long m_lMasterDelay[32];      /* 各々の意味と範囲はm_lModeの値により異なる(公式ガイドブック参照) */
	long m_lMasterEqualizer[32];  /* 各々の意味と範囲はm_lModeの値により異なる(公式ガイドブック参照) */
	long m_lMasterInsertion[32];  /* この値は使われない。 */
	long m_lNumMIDIPart;          /* MIDIPartの数(=16) */
	long m_lNumMIDIDrumSetup;     /* MIDIDrumSetupの数(=2or4) */
	MIDIPart* m_pMIDIPart[MIDISTATUS_MAXMIDIPART];
	MIDIDrumSetup* m_pMIDIDrumSetup[MIDISTATUS_MAXMIDIDRUMSETUP];
	long m_lUser1;
	long m_lUser2;
	long m_lUser3;
	long m_lUserFlag;
	long m_lRunningStatus;
} MIDIStatus;
/* MIDIStatus_Put系関数 */

/* リセット */
long __stdcall MIDIStatus_PutReset (MIDIStatus* pMIDIStatus);
/* GMリセット */
long __stdcall MIDIStatus_PutGMReset (MIDIStatus* pMIDIStatus);
/* GM2リセット */
long __stdcall MIDIStatus_PutGM2Reset (MIDIStatus* pMIDIStatus);
/* GSリセット */
long __stdcall MIDIStatus_PutGSReset (MIDIStatus* pMIDIStatus);
/* 88リセット */
long __stdcall MIDIStatus_Put88Reset (MIDIStatus* pMIDIStatus);
/* XGリセット */
long __stdcall MIDIStatus_PutXGReset (MIDIStatus* pMIDIStatus);
/* MIDIメッセージを与えることによりパラメータを変更する。 */
long __stdcall MIDIStatus_PutMIDIMessage (MIDIStatus* pMIDIStatus, unsigned char* pMIDIMessage, long lLen);
/* MIDIStatusの書き込み(外部隠蔽、この関数はMIDIStatus_Saveから呼び出される) */
long __stdcall MIDIStatus_Write (MIDIStatus* pMIDIStatus, FILE* pFile, long lVersion);
/* MIDIStatusの保存 */
long __stdcall MIDIStatus_SaveA (MIDIStatus* pMIDIStatus, const char* pszFileName);
#define MIDIStatus_Save MIDIStatus_SaveW
#define MIDIStatus_Save MIDIStatus_SaveA
/* MIDIStatusの読み込み(外部隠蔽、この関数はMIDIStatus_Loadから呼び出される) */
long __stdcall MIDIStatus_Read (MIDIStatus* pMIDIStatus, FILE* pFile, long lVersion);
/* MIDIStatusのロード */
MIDIStatus* __stdcall MIDIStatus_LoadA (const char* pszFileName);
#define MIDIStatus_Load MIDIStatus_LoadW
#define MIDIStatus_Load MIDIStatus_LoadA