MIDIStatus/MIDIStatus.bas


' MIDIStatus_Put系関数

' リセット
Declare Function MIDIStatus_PutReset Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' GMリセット
Declare Function MIDIStatus_PutGMReset Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' GM2リセット
Declare Function MIDIStatus_PutGM2Reset Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' GSリセット
Declare Function MIDIStatus_PutGSReset Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' 88リセット
Declare Function MIDIStatus_Put88Reset Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' XGリセット
Declare Function MIDIStatus_PutXGReset Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' MIDIメッセージを与えることによりパラメータを変更する。
Declare Function MIDIStatus_PutMIDIMessage Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByRef pMIDIMessage As Byte, ByVal lLen As Long) As Long



' MIDIStatusの書き込み(外部隠蔽、この関数はMIDIStatus_Saveから呼び出される)
Declare Function MIDIStatus_Write Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal pFile As Long, ByVal lVersion As Long) As Long

' MIDIStatusの保存
Declare Function MIDIStatus_Save Lib "MIDIStatus.dll" Alias "MIDIStatus_SaveA" _
    (ByVal pMIDIStatus As Long, ByVal pszFileName As String) As Long

' MIDIStatusの読み込み(外部隠蔽、この関数はMIDIStatus_Loadから呼び出される)
Declare Function MIDIStatus_Read Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal pFile, ByVal lVersion As Long) As Long

' MIDIStatusのロード
Declare Function MIDIStatus_Load Lib "MIDIStatus.dll" Alias "MIDIStatus_LoadA" _
    (ByVal pszFileName As String) As Long




